Fix spacing for transactions search result

--- a/source/features/search/ui/TransactionSearchResult.scss
+++ b/source/features/search/ui/TransactionSearchResult.scss
@@ -1,3 +1,3 @@
-.transactions {
+.transaction {
   margin-top: 41px;
 }
